--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -49,14 +49,14 @@
         </a>
       </li>
 
-      <li class="nav-item {% if request.resolver_match.view_name == 'transactions' %} active {% endif %}">
+      {% comment %} <li class="nav-item {% if request.resolver_match.view_name == 'transactions' %} active {% endif %}">
         <a href="{% url 'transactions' %}" class="nav-link">
           <span class="sidebar-icon">
             <i class="fas fa-list"></i>
           </span>
           <span class="sidebar-text">Transactions</span>
         </a>
-      </li>
+      </li> {% endcomment %}
 
       <li class="nav-item {% if request.resolver_match.view_name == 'list_categories' %} active {% endif %}">
         <a href="{% url 'list_categories' %}" class="nav-link">
@@ -67,7 +67,7 @@
         </a>
       </li>
 
-      <li class="nav-item {% if request.resolver_match.view_name == 'list_category_title' %} active {% endif %}">
+      {% comment %} <li class="nav-item {% if request.resolver_match.view_name == 'list_category_title' %} active {% endif %}">
         <a href="{% url 'list_category_title' %}" class="nav-link">
           <span class="sidebar-icon">
             <i class="fas fa-network-wired"></i>
@@ -83,7 +83,7 @@
           </span>
           <span class="sidebar-text">Sub Category</span>
         </a>
-      </li>
+      </li> {% endcomment %}
 
       <li class="nav-item {% if request.resolver_match.view_name == 'list_products' %} active {% endif %}">
         <a href="{% url 'list_products' %}" class="nav-link">
